adding luatexra-reference.tex giving an overview of the packages, and adding references to it in the documentations

--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -2,8 +2,9 @@
 %
 % Copyright (C) 2009 by Elie Roux <elie.roux@telecom-bretagne.eu>
 %
-% This work is under the CC0 license. As an exception, the file luainputenc.sty
-% has more restrictions. See the file for more details.
+% This work is under the CC0 license. As an exception, the files 
+% luainputenc.sty, lutf8.def and lutf8x.def have more restrictions. 
+% See these file for more details.
 %
 % People who helped on this package:
 %   Javier Bezos
@@ -44,8 +45,9 @@ This is a generated file.
 
 Copyright (C) 2009 by Elie Roux <elie.roux@telecom-bretagne.eu>
 
-This work is under the CC0 license. As an exception, the file luainputenc.sty
-has more restrictions. See the file for more details.
+This work is under the CC0 license. As an exception, the files 
+luainputenc.sty, lutf8.def and lutf8x.def have more restrictions. 
+See these file for more details.
 
 People who helped on this package:
   Javier Bezos
@@ -155,7 +157,7 @@ and the derived files
 % \maketitle
 %
 % \begin{abstract}
-% Input encoding management for Lua\TeX .
+% Input encoding management for Lua\TeX . For an introduction on this package (among others), please refer to the document \texttt{luatex-reference.pdf}.
 % \end{abstract}
 %
 % \tableofcontents
