--- a/README
+++ b/README
@@ -1,33 +1,90 @@
-luainputenc is the adaptation of inputenc for LuaTeX, as the old inputenc does
+                        The luainputenc LaTeX2e package
+
+
+luainputenc is an adaptation of inputenc for LuaTeX, as the old inputenc does
 not work (at all) with the LuaTeX engine.
 
 You need luatextra to use this package.
 
-Please note that you have to use this package even if you compile documents in
-UTF-8.
+Please note that you have to use this package even for UTF-8 encoded sources.
+This is needed for compatibility with non-Unicode fonts and may be worked around
+in the future.
 
-This package automatically calls the old inputenc if called with pdfTeX, and
-xetex-inputenc if called with XeTeX, so you can safely use it with all your
+This package automatically calls the old inputenc when running with pdfTeX, and
+xetex-inputenc when running XeTeX, so you can safely use it with all your
 documents.
 
-The distributed files are:
-
-luainputenc.dtx: the source code
-luainputenc.pdf: the documentation
-
-See the first comment in luainputenc.dtx to know how to generate the files.
-
-The derived files are:
-
-luainputenc.sty:   the LaTeX package
-luainputenc.lua:   contains the lua functions for encoding translation
-lutf8.def:         the replacement for utf8.def
-lutf8x.def:        idem, with new functionalities for unicode fonts
-eu2enc.def:        definition of the EU2 (unicode) font encoding for LuaTeX
-eu2lmr.fd:         definition of the lmodern font for the EU2 encoding
-inputenc.sty.diff: patch for inputenc.sty to load luainputenc automatically if
-                   called with LuaTeX
+Please see luatextra-reference.pdf for an introduction.
                    
-Please see the luatextra-reference.pdf documentation for an introduction.
-                   
-This package is developped on http://github.com/eroux/lualatex/tree/master .
+This package is developed on <http://github.com/eroux/lualatex/tree/master>.
+
+Installation
+------------
+
+Here are the recommended installation methods (preferred first).
+
+1. If you are using TeX Live 2008 or later, use 'tlmgr install luainputenc'.
+Alternatively, try your (TeX or Linux) distribution's package management system.
+
+2. a. Grab luainputenc.tds.zip on the CTAN.
+   b. Unzip it at the root of one or your TDS trees.
+   c. You may need to update some filename database after, see your TeX
+distribution's manual for details.
+
+3. a. Grab the sources from CTAN or github.
+   b. Run 'make install TEXMF=/path/to/texmf'.
+   c. See 2c.
+
+4. Try to figure it out by looking at the Makefile and comments in the sources.
+
+
+Manifest
+--------
+
+Source files:
+        luainputenc.dtx         the single file source & doc
+        luainputenc.pdf         the documentation
+
+Derived files:
+        luainputenc.pdf         the documentation
+        luainputenc.sty         the LaTeX package
+        luainputenc.lua         the lua functions for encoding translation
+        lutf8.def               replacement for utf8.def
+        lutf8x.def              idem, with new functionalities for Unicode fonts
+        eu2enc.def              definition of the EU2 (Unicode) font encoding
+                                for LuaTeX
+        eu2lmr.fd:              lmodern font definition for the EU2 encoding
+        inputenc.sty.diff:      patch for inputenc.sty to load luainputenc
+                                automatically if running LuaTeX
+
+License
+-------
+
+This work is under the CC0 license, with an additional restriction: 
+the article 6 of the LaTeX Project Public License (lppl), that applies to code
+that has been taken from LaTeX files.
+
+You can find the text of the lppl at
+
+The lppl can be found at http://www.latex-project.org/lppl.txt
+
+You can find the CC0 full text at
+
+http://creativecommons.org/publicdomain/zero/1.0/legalcode
+
+The file luainputenc.dtx contains code with the lppl restriction as well as the
+derived files
+  luainputenc.sty
+  lutf8.def
+  lutf8x.def
+
+For further details about their license, please see the comments in these files.
+
+The other derived files are
+  luainputenc.lua
+  inputenc.sty.diff
+  eu2enc.def
+  eu2lmr.fd
+  
+These files are under the CC0 license only.
+
