--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -170,7 +170,8 @@ and the derived files
 % \maketitle
 %
 % \begin{abstract}
-% Input encoding management for Lua\TeX . For an introduction on this package (among others), please refer to \texttt{luatex-reference.pdf}.
+% Input encoding management for Lua\TeX . For an introduction on this package
+% (among others), please refer to \texttt{luatex-reference.pdf}.
 % \end{abstract}
 %
 % \tableofcontents
@@ -179,48 +180,112 @@ and the derived files
 %
 % \subsection{Introduction}
 %
-% One the the most interesting new features of Lua\TeX\ is the fact that it is (like Omega/Aleph) not limited to 256 characters, and can now understand Unicode. The problem is that it does not read input the way older engines (like pdf\TeX) do, and thus \textsf{inputenc} is totally broken with Lua\TeX . This package aims at replacing \textsf{inputenc} for Lua\TeX , by adapting the way Lua\TeX\ handles input, and the way \textsf{inputenc} handles UTF-8. This package has two very distinct modes: 8-bit and UTF-8.
+% One the the most interesting new features of Lua\TeX\ is the fact that it is
+% (like Omega/Aleph) not limited to 256 characters, and can now understand
+% Unicode. The problem is that it does not read input the way older engines
+% (like pdf\TeX) do, and thus \textsf{inputenc} is totally broken with Lua\TeX
+% . This package aims at replacing \textsf{inputenc} for Lua\TeX , by adapting
+% the way Lua\TeX\ handles input, and the way \textsf{inputenc} handles UTF-8.
+% This package has two very distinct modes: 8-bit and UTF-8.
 %
 % \subsection{Overview of 8-bit mode}
 %
-% This package \textbf{does not} map 8-bit encodings to utf8. It allows Lua\TeX\ to read 8-bit characters, by converting each byte into a unicode character with the same character number. The resulting unicode characters are not true UTF-8, they are what we will call ``fake UTF-8". For example the byte 225 will be converted into the unicode character with number 225 (two bytes long). It will be true UTF-8 only if the encoding is latin1.
+% This package \textbf{does not} map 8-bit encodings to utf8. It allows
+% Lua\TeX\ to read 8-bit characters, by converting each byte into a unicode
+% character with the same character number. The resulting unicode characters
+% are not true UTF-8, they are what we will call ``fake UTF-8". For example
+% the byte 225 will be converted into the unicode character with number 225
+% (two bytes long). It will be true UTF-8 only if the encoding is latin1.
 %
-% Here is how it works: the 8-bit encodings are converted into fake UTF-8, so that the corresponding tokens are chars with the good numbers. Then (like \textsf{inputenc}) it reads the char numbers, and converts it into LICR (\LaTeX\ Internal Character Representation), with the font encoding.
+% Here is how it works: the 8-bit encodings are converted into fake UTF-8, so
+% that the corresponding tokens are chars with the good numbers. Then (like
+% \textsf{inputenc}) it reads the char numbers, and converts it into LICR
+% (\LaTeX\ Internal Character Representation), with the font encoding.
 %
-% \textsf{luainputenc} only changes the input behaviour, it does not change the ouput behaviour (when files are written for example). The consequence is that files will still be written by Lua\TeX\ in UTF-8 (fake UTF-8 in this case), even if the asked input encoding is a 8-bit encoding. In most cases it's not a problem, as most files will be written in LICR, meaning ASCII, which is both 8-bit and UTF-8. The problem comes when characters with a number $>$ 128 are written in a 8-bit encoding. This may happen if you use |\protect| in a section for example. In these cases, Lua\TeX\ will write fake UTF-8, and try to read 8-bit encoding, so it will get confused.
+% \textsf{luainputenc} only changes the input behaviour, it does not change
+% the ouput behaviour (when files are written for example). The consequence is
+% that files will still be written by Lua\TeX\ in UTF-8 (fake UTF-8 in this
+% case), even if the asked input encoding is a 8-bit encoding. In most cases
+% it's not a problem, as most files will be written in LICR, meaning ASCII,
+% which is both 8-bit and UTF-8. The problem comes when characters with a
+% number $>$ 128 are written in a 8-bit encoding. This may happen if you use
+% |\protect| in a section for example. In these cases, Lua\TeX\ will write
+% fake UTF-8, and try to read 8-bit encoding, so it will get confused.
 %
-% The proposed solution is to unactivate the input conversion when we read certain files or extentions. This package should work with no change for most documents, but if you cook your own aux files with an unknown extention, you may have to force the package to read some files in UTF-8 instead of 8-bit. See comments in the \texttt{.sty} file to know the useful commands.
+% The proposed solution is to unactivate the input conversion when we read
+% certain files or extentions. This package should work with no change for
+% most documents, but if you cook your own aux files with an unknown
+% extention, you may have to force the package to read some files in UTF-8
+% instead of 8-bit. See comments in the \texttt{.sty} file to know the useful
+% commands.
 %
 % \subsection{Overview of UTF-8 mode}
 %
-% The behaviour of \textsf{inputenc} in utf8 mode is to read the input byte by byte, and decide if the character we are in is 1, 2, 3 or 4 bytes long, and then read other bytes accordingly. This behaviour fails with Lua\TeX\ because it reads input character by character (characters do not have a fixed number of bytes in unicode). The result is thus an error.
+% The behaviour of \textsf{inputenc} in utf8 mode is to read the input byte by
+% byte, and decide if the character we are in is 1, 2, 3 or 4 bytes long, and
+% then read other bytes accordingly. This behaviour fails with Lua\TeX\
+% because it reads input character by character (characters do not have a
+% fixed number of bytes in unicode). The result is thus an error.
 %
-% All characters recognized by \TeX\ are active characters, that correspond to a LICR macro. Then \textsf{inputenc} reads the \texttt{*.dfu} files that contain the correspondance between these LICR macros and a character number in the fonts for different font encodings (T1, OT1, etc.).
+% All characters recognized by \TeX\ are active characters, that correspond to
+% a LICR macro. Then \textsf{inputenc} reads the \texttt{*.dfu} files that
+% contain the correspondance between these LICR macros and a character number
+% in the fonts for different font encodings (T1, OT1, etc.).
 %
 % \subsubsection{legacy mode}
 %
-% \textsf{luainputenc} can get this behaviour (we will call it \emph{legacy mode}, but another difference implied by the fact that Lua\TeX\ can read more than 256 characters is that fonts can also have more than 256 characters. Lua\TeX\ can thus read unicode fonts. If we want to use unicode fonts (OTF for example), we can't use the \emph{legacy mode} anymore, as it would mean that we would have to rewrite a specially long \texttt{unicode.dfu} file, and it would be totally inefficient, as for instance \texttt{\'e} (unicode character number 233) would be mapped to \texttt{\string\'e}, and then mapped back to \texttt{\string\char\ 233}.
+% \textsf{luainputenc} can get this behaviour (we will call it \emph{legacy
+% mode}, but another difference implied by the fact that Lua\TeX\ can read
+% more than 256 characters is that fonts can also have more than 256
+% characters. Lua\TeX\ can thus read unicode fonts. If we want to use unicode
+% fonts (OTF for example), we can't use the \emph{legacy mode} anymore, as it
+% would mean that we would have to rewrite a specially long
+% \texttt{unicode.dfu} file, and it would be totally inefficient, as for
+% instance \texttt{\'e} (unicode character number 233) would be mapped to
+% \texttt{\string\'e}, and then mapped back to \texttt{\string\char\ 233}.
 %
 % \subsubsection{unicode font mode}
 %
-% To fix this, the most simple solution is to desactivate all activated characters, thus typing \texttt{\'e} will directly call \texttt{\string\char\ 233} in the unicode fonts, and produce a \texttt{\'e}. We will call this behaviour the \emph{unicode font mode}. To enable this mode, you can use the option \texttt{unactivate} in \textsf{luainputenc}, and you must use the font encoding \texttt{EU2} provided by this package too. See section \ref{s:eu2} for more details about \texttt{EU2}. To use this mode with \texttt{EU2}, you must be able to open OTF fonts. A simple way to do so it by using the package \textsf{luaotfload}.
+% To fix this, the most simple solution is to desactivate all activated
+% characters, thus typing \texttt{\'e} will directly call
+% \texttt{\string\char\ 233} in the unicode fonts, and produce a \texttt{\'e}.
+% We will call this behaviour the \emph{unicode font mode}. To enable this
+% mode, you can use the option \texttt{unactivate} in \textsf{luainputenc},
+% and you must use the font encoding \texttt{EU2} provided by this package
+% too. See section \ref{s:eu2} for more details about \texttt{EU2}. To use
+% this mode with \texttt{EU2}, you must be able to open OTF fonts. A simple
+% way to do so it by using the package \textsf{luaotfload}.
 %
 % \subsubsection{mixed mode}
 %
-% But the \emph{unicode font mode} has a strong limitation (that will certainly dissapear with time): it cannot use non-unicode fonts. If you want to mix unicode fonts and old fonts, you'll have to use the \emph{mixed mode}. In this mode you can type some parts of your document in \emph{legacy mode} and some in \emph{unicode font mode}. The reason why we chose not to integrate this choice in the \emph{legacy mode} is that we wanted to have a mode that preserved most of the backward compatibility, to safely compile old documents; the \emph{mixed mode} introduces new things that may break old documents. To get the \emph{mixed mode}, you must pass the option \texttt{lutf8x} to \textsf{luainputenc}. This mode is the most experimental.
+% But the \emph{unicode font mode} has a strong limitation (that will
+% certainly dissapear with time): it cannot use non-unicode fonts. If you want
+% to mix unicode fonts and old fonts, you'll have to use the \emph{mixed
+% mode}. In this mode you can type some parts of your document in \emph{legacy
+% mode} and some in \emph{unicode font mode}. The reason why we chose not to
+% integrate this choice in the \emph{legacy mode} is that we wanted to have a
+% mode that preserved most of the backward compatibility, to safely compile
+% old documents; the \emph{mixed mode} introduces new things that may break
+% old documents. To get the \emph{mixed mode}, you must pass the option
+% \texttt{lutf8x} to \textsf{luainputenc}. This mode is the most experimental.
 %
 % \section{Files}
 %
-% This package contains a \texttt{.sty} file for both \LaTeX\ and Plain, a patch for inputenc to use \textsf{luainputenc} so that you can process old documents without changing anything, and the lua functions.
+% This package contains a \texttt{.sty} file for both \LaTeX\ and Plain, a
+% patch for inputenc to use \textsf{luainputenc} so that you can process old
+% documents without changing anything, and the lua functions.
 %
 % \subsection{\texttt{inputenc.sty} patch}
 %
-% A good thing would be to patch \textsf{inputenc} to load \textsf{luainputenc} instead, so that you don't have to change your documents to load \textsf{luainputenc} especially. The \LaTeX\ team is extremely conservative and does not want this patch applied (maybe we will find a solution later). Here is a patch for inputenc.sty:
+% A good thing would be to patch \textsf{inputenc} to load
+% \textsf{luainputenc} instead, so that you don't have to change your
+% documents to load \textsf{luainputenc} especially. The \LaTeX\ team is
+% extremely conservative and does not want this patch applied (maybe we will
+% find a solution later). Here is a patch for inputenc.sty:
 %
 % \iffalse
 %<*patch>
 % \fi
-%
 %
 %    \begin{macrocode}
 
@@ -255,7 +320,8 @@ and the derived files
 %
 % \subsection{\texttt{luainputenc.sty}}
 %
-% This file has some code from \texttt{inputenc.sty}, but also provides new options, and new macros to convert from 8-bit to fake UTF-8.
+%    This file has some code from \texttt{inputenc.sty}, but also provides new
+%    options, and new macros to convert from 8-bit to fake UTF-8.
 %
 % \iffalse
 %<*package>
@@ -282,7 +348,10 @@ and the derived files
 
 %    \end{macrocode}
 %
-% First we check if we are called with Lua\TeX , (pdf)\TeX or Xe\TeX . If we are called with pdf\TeX , we default to \textsf{inputenc}, and to \textsf{xetex-inputenc} if we are called with Xe\TeX . We also remap the new options to \texttt{utf8} in these cases.
+%    First we check if we are called with Lua\TeX , (pdf)\TeX or Xe\TeX . If
+%    we are called with pdf\TeX , we default to \textsf{inputenc}, and to
+%    \textsf{xetex-inputenc} if we are called with Xe\TeX . We also remap the
+%    new options to \texttt{utf8} in these cases.
 %
 %    \begin{macrocode}
 
@@ -311,7 +380,8 @@ and the derived files
 
 %    \end{macrocode}
 %
-% Here we know we are called with Lua\TeX . We first require \textsf{luatextra}, then we load the \texttt{lua} file.
+%    Here we know we are called with Lua\TeX . We first require
+%    \textsf{luatextra}, then we load the \texttt{lua} file.
 %
 %    \begin{macrocode}
 
@@ -321,7 +391,7 @@ and the derived files
 
 %    \end{macrocode}
 %
-% Here is some code from \textsf{inputenc}.
+%    Here is some code from \textsf{inputenc}.
 %
 %    \begin{macrocode}
 
@@ -352,7 +422,9 @@ and the derived files
 }
 %    \end{macrocode}
 %
-% We changed a little the behaviour of this macro: we removed |\@inpenc@loop\^^?\^^ff|, because it made no sense in UTF-8 mode. We will call this line for 8-bit encodings.
+%    We changed a little the behaviour of this macro: we removed
+%    |\@inpenc@loop\^^?\^^ff|, because it made no sense in UTF-8 mode. We will
+%    call this line for 8-bit encodings.
 %
 %    \begin{macrocode}
 \def\inputencoding#1{%
@@ -400,7 +472,9 @@ and the derived files
 
 %    \end{macrocode}
 %
-% Here we declare our options. Note that we remap \texttt{utf8} to \texttt{lutf8}, because we use out \texttt{lutf8.def} instead of \textsf{inputenc}'s \texttt{utf8.def}.
+%    Here we declare our options. Note that we remap \texttt{utf8} to
+%    \texttt{lutf8}, because we use out \texttt{lutf8.def} instead of
+%    \textsf{inputenc}'s \texttt{utf8.def}.
 %
 %    \begin{macrocode}
 
@@ -422,7 +496,8 @@ and the derived files
 
 %    \end{macrocode}
 %
-% For the \texttt{unactivate} option, for \emph{unicode font mode}, we just don't do anything.
+%    For the \texttt{unactivate} option, for \emph{unicode font mode}, we just
+%    don't do anything.
 %
 %    \begin{macrocode}
 
@@ -432,7 +507,9 @@ and the derived files
 
 %    \end{macrocode}
 %
-% All other options are 8-bit encodings, so we activate the translation into fake UTF-8, and we execute the loop we removes from |\inputencoding|.
+%    All other options are 8-bit encodings, so we activate the translation
+%    into fake UTF-8, and we execute the loop we removes from
+%    |\inputencoding|.
 %
 %    \begin{macrocode}
 
@@ -444,7 +521,11 @@ and the derived files
 
 %    \end{macrocode}
 %
-% |\lIE@setstarted| and |\lIE@setstopped| are called when the fake UTF-8 translation must be activated or desactivated. You can call them several successive times. They are called very often, even if the package is not activated (for example if it's loaded with the utf8 option), but they act only if the package is activated.
+%    |\lIE@setstarted| and |\lIE@setstopped| are called when the fake UTF-8
+%    translation must be activated or desactivated. You can call them several
+%    successive times. They are called very often, even if the package is not
+%    activated (for example if it's loaded with the utf8 option), but they act
+%    only if the package is activated.
 %
 %    \begin{macrocode}
 
@@ -462,11 +543,23 @@ and the derived files
 
 %    \end{macrocode}
 %
-% The following 5 macros are made to declare a file that will have to be read in fake UTF-8 and not in 8-bit. These files are the ones that will be generated by \TeX . In \textbf{no way} this means you can include true UTF-8 files, it means that you can include files that have been written by Lua\TeX\ with \textsf{luainputenc}, which means files in fake UTF-8. The macros are very simple, when you call them with a file name (the same as the one you will use with \string\input ), it will read it with or without the fake UTF-8 translation. This package includes a whole bunch of extentions that will be read in fake UTF-8, so the occasions to use these macros will be rare, but if you use them, please report it to the package maintainer.
+%    The following 5 macros are made to declare a file that will have to be
+%    read in fake UTF-8 and not in 8-bit. These files are the ones that will
+%    be generated by \TeX . In \textbf{no way} this means you can include true
+%    UTF-8 files, it means that you can include files that have been written
+%    by Lua\TeX\ with \textsf{luainputenc}, which means files in fake UTF-8.
+%    The macros are very simple, when you call them with a file name (the same
+%    as the one you will use with \string\input ), it will read it with or
+%    without the fake UTF-8 translation. This package includes a whole bunch
+%    of extentions that will be read in fake UTF-8, so the occasions to use
+%    these macros will be rare, but if you use them, please report it to the
+%    package maintainer.
 %
-% \begin{macro}{\lIE@SetUtfFile}
+%    \begin{macro}{\lIE@SetUtfFile}
 %
-% If you call this macro with a file name, each time you will input this file, it will be read in fake UTF-8. You can call it with a file that you generate with Lua\TeX\ and that you want to include.
+%    If you call this macro with a file name, each time you will input this
+%    file, it will be read in fake UTF-8. You can call it with a file that you
+%    generate with Lua\TeX\ and that you want to include.
 %
 %    \begin{macrocode}
 
@@ -476,11 +569,13 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@SetNonUtfFile}
+%    \begin{macro}{\lIE@SetNonUtfFile}
 %
-% Same as the previous macro, except that the file will be read as 8-bit. This macro is useful if there is an exception in an extention (see further comments).
+%    Same as the previous macro, except that the file will be read as 8-bit.
+%    This macro is useful if there is an exception in an extention (see
+%    further comments).
 %
 %    \begin{macrocode}
 
@@ -490,11 +585,11 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@UnsetFile}
+%    \begin{macro}{\lIE@UnsetFile}
 %
-% This macro gives a file the default behaviour of its extention.
+%    This macro gives a file the default behaviour of its extention.
 %
 %    \begin{macrocode}
 
@@ -504,11 +599,16 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@SetUtfExt}
+%    \begin{macro}{\lIE@SetUtfExt}
 %
-% You can tell \textsf{luainputenc} to treat all files with a particular extention in a certain way. The way the file extention is checked is to compare the four last characters of the filename. So if your extention has only three letters, you must include the preceding dot. This macro tells \textsf{luainputenc} to read all files from an extention in fake UTF-8.
+%    You can tell \textsf{luainputenc} to treat all files with a particular
+%    extention in a certain way. The way the file extention is checked is to
+%    compare the four last characters of the filename. So if your extention
+%    has only three letters, you must include the preceding dot. This macro
+%    tells \textsf{luainputenc} to read all files from an extention in fake
+%    UTF-8.
 %
 %    \begin{macrocode}
 
@@ -518,11 +618,11 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@SetUtfExt}
+%    \begin{macro}{\lIE@SetUtfExt}
 %
-% Same as before, but the files will be read in 8-bit.
+%    Same as before, but the files will be read in 8-bit.
 %
 %    \begin{macrocode}
 
@@ -532,11 +632,13 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@InputUtfFile}
+%    \begin{macro}{\lIE@InputUtfFile}
 %
-% This macro inputs a file in fake UTF-8. It has the ``feature" to unset the behaviour on the file you will call, so to be safe, you must call them with files for which the behaviour has not been set.
+%    This macro inputs a file in fake UTF-8. It has the ``feature" to unset
+%    the behaviour on the file you will call, so to be safe, you must call
+%    them with files for which the behaviour has not been set.
 %
 %    \begin{macrocode}
 
@@ -549,11 +651,11 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% \begin{macro}{\lIE@InputNonUtfFile}
+%    \begin{macro}{\lIE@InputNonUtfFile}
 %
-% Same as before, but to read a file as 8-bit.
+%    Same as before, but to read a file as 8-bit.
 %
 %    \begin{macrocode}
 
@@ -565,9 +667,9 @@ and the derived files
 
 %    \end{macrocode}
 %
-% \end{macro}
+%    \end{macro}
 %
-% Two definitions to put the previous two macros in the user space.
+%    Two definitions to put the previous two macros in the user space.
 %
 %    \begin{macrocode}
 
@@ -626,7 +728,9 @@ and the derived files
 
 %    \end{macrocode}
 %
-% Most of the file is taken from \texttt{utf8.def}, the main changes are commented. A lot of code was removed, especially the codes that analysed the unicode characters byte by byte.
+%    Most of the file is taken from \texttt{utf8.def}, the main changes are
+%    commented. A lot of code was removed, especially the codes that analysed
+%    the unicode characters byte by byte.
 %
 %    \begin{macrocode}
 
@@ -645,7 +749,11 @@ and the derived files
 
 %    \end{macrocode}
 %
-% This function is changed a lot. Its aim is to map the character (first argument) to a macro (second argument). In \texttt{utf8.def} it was complicated as unicode was analyzed byte by byte. With Lua\TeX\ it is extremely simple, we just have to activate the character, and call a traditional |\DeclareInputTeXt|.
+%    This function is changed a lot. Its aim is to map the character (first
+%    argument) to a macro (second argument). In \texttt{utf8.def} it was
+%    complicated as unicode was analyzed byte by byte. With Lua\TeX\ it is
+%    extremely simple, we just have to activate the character, and call a
+%    traditional |\DeclareInputTeXt|.
 %
 %    \begin{macrocode}
 
@@ -734,7 +842,12 @@ and the derived files
 
 %    \end{macrocode}
 %
-% This file is mostly the code from \texttt{lutf.def}, but it adds mechanisms to pass from \emph{legacy mode} to \emph{unicode font mode}. The trick is to put in a lua table all characters that are activated by the \emph{legacy mode}, and to unactivate them when we switch to \emph{unicode font mode}. This is made (almost) entirely in lua. The difficult part is the changes in |\DeclareFontEncoding|.
+%    This file is mostly the code from \texttt{lutf.def}, but it adds
+%    mechanisms to pass from \emph{legacy mode} to \emph{unicode font mode}.
+%    The trick is to put in a lua table all characters that are activated by
+%    the \emph{legacy mode}, and to unactivate them when we switch to
+%    \emph{unicode font mode}. This is made (almost) entirely in lua. The
+%    difficult part is the changes in |\DeclareFontEncoding|.
 %
 %    \begin{macrocode}
 
@@ -752,7 +865,7 @@ and the derived files
 
 %    \end{macrocode}
 %
-% We change it a little to add the activated character in the lua table.
+%    We change it a little to add the activated character in the lua table.
 %
 %    \begin{macrocode}
 
@@ -778,7 +891,8 @@ and the derived files
 
 %    \end{macrocode}
 %
-% The macros to change from/to \emph{legacy mode} to/from \emph{unicode font mode}.
+%    The macros to change from/to \emph{legacy mode} to/from \emph{unicode
+%    font mode}.
 %
 %    \begin{macrocode}
 
@@ -798,7 +912,10 @@ and the derived files
 
 %    \end{macrocode}
 %
-% We add some code to automatically activate or unactivate characters according to the encoding changes. Note that we override |\@@enc@update|, which may pose some problems if a package of yours does it too. Fortunately this package is the only one that does it in \TeX Live.
+%    We add some code to automatically activate or unactivate characters
+%    according to the encoding changes. Note that we override |\@@enc@update|,
+%    which may pose some problems if a package of yours does it too.
+%    Fortunately this package is the only one that does it in \TeX Live.
 %
 %    \begin{macrocode}
 
@@ -871,7 +988,12 @@ and the derived files
 %
 % \subsection{\texttt{eu2enc.def}\label{s:eu2}}
 %
-% This file is extremely short. It just declares the encoding, with the default font. The default font here is lmr, which means that \LaTeX\ will read \texttt{eu2lmr.fd}. The problem is that all unicode fonts are OTF fonts, so \texttt{eu2lmr.fd} will call OTF fonts. Thus, to use \texttt{EU2}, you need to be able to read OTF fonts. The package \textsf{luaotfload} is a good choice to be able to do so.
+%    This file is extremely short. It just declares the encoding, with the
+%    default font. The default font here is lmr, which means that \LaTeX\ will
+%    read \texttt{eu2lmr.fd}. The problem is that all unicode fonts are OTF
+%    fonts, so \texttt{eu2lmr.fd} will call OTF fonts. Thus, to use
+%    \texttt{EU2}, you need to be able to read OTF fonts. The package
+%    \textsf{luaotfload} is a good choice to be able to do so.
 %
 %    \begin{macrocode}
 
@@ -893,7 +1015,9 @@ and the derived files
 %
 % \subsection{\texttt{eu2lmr.fd}}
 %
-% This file simply describes the default (lmr) font of the \texttt{EU2} encoding. It loads the otf fonts with some default features enabled. This file may change, don't rely on it too much.
+%    This file simply describes the default (lmr) font of the \texttt{EU2}
+%    encoding. It loads the otf fonts with some default features enabled. This
+%    file may change, don't rely on it too much.
 %
 %    \begin{macrocode}
 
@@ -958,7 +1082,8 @@ and the derived files
 %
 % \subsection{\texttt{luainputenc.lua}}
 %
-% First the \texttt{inputenc} module is registered as a Lua\TeX\ module, with some informations.
+%    First the \texttt{inputenc} module is registered as a Lua\TeX\ module,
+%    with some informations.
 %
 % \iffalse
 %<*lua>
@@ -1013,7 +1138,8 @@ end
 
 %    \end{macrocode}
 %
-% The function to transform a 8-bit character in the corresponding fake UTF-8 character.
+%    The function to transform a 8-bit character in the corresponding fake
+%    UTF-8 character.
 %
 %    \begin{macrocode}
 
@@ -1023,7 +1149,8 @@ end
 
 %    \end{macrocode}
 %
-% The function that will be registered in the \texttt{process\_input\_buffer} callback when needed.
+%    The function that will be registered in the
+%    \texttt{process\_input\_buffer} callback when needed.
 %
 %    \begin{macrocode}
 
@@ -1033,7 +1160,9 @@ end
 
 %    \end{macrocode}
 %
-% \texttt{start()} and \texttt{stop()} are the functions that register or unregister the function in the callback. When the function is registered, Lua\TeX\ reads the input in fake UTF-8.
+%    \texttt{start()} and \texttt{stop()} are the functions that register or
+%    unregister the function in the callback. When the function is registered,
+%    Lua\TeX\ reads the input in fake UTF-8.
 %
 %    \begin{macrocode}
 
@@ -1054,7 +1183,10 @@ end
 
 %    \end{macrocode}
 %
-% Here is a list of all file extentions for which we consider that the files have been written by Lua\TeX , and thus must be read in fake UTF-8. I may have forgotten things in the list. If you find a new extention, please report the maintainer.
+%    Here is a list of all file extentions for which we consider that the
+%    files have been written by Lua\TeX , and thus must be read in fake UTF-8.
+%    I may have forgotten things in the list. If you find a new extention,
+%    please report the maintainer.
 %
 %    \begin{macrocode}
 
@@ -1111,7 +1243,7 @@ luainputenc.unicode_extentions = {
 
 %    \end{macrocode}
 %
-% The code to define a specific behaviour for certain files.
+%    The code to define a specific behaviour for certain files.
 %
 %    \begin{macrocode}
 
@@ -1170,7 +1302,8 @@ end
 
 %    \end{macrocode}
 %
-% We register the functions to stop or start the fake UTF-8 translation in the appropriate callbacks if necessary.
+%    We register the functions to stop or start the fake UTF-8 translation in
+%    the appropriate callbacks if necessary.
 %
 %    \begin{macrocode}
 
@@ -1197,7 +1330,8 @@ end
 
 %    \end{macrocode}
 %
-% Finally we provide some functions to activate or disactivate the catcodes of the non-ASCII characters.
+%    Finally we provide some functions to activate or disactivate the catcodes
+%    of the non-ASCII characters.
 %
 %    \begin{macrocode}
 
