Update URI in the Readme.

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ documents.
 
 Please see luatextra-reference.pdf for an introduction.
                    
-This package is developed on <http://github.com/eroux/lualatex/tree/master>.
+This package is developed on <http://github.com/mpg/luainputenc>.
 
 Installation
 ------------
